# chess

./: .coverage  .gitignore  CLAUDE.md  README.md  _bench.py  _run_bench.bat  bot.py  chess.yaml  chess_bot.ipynb  chess_bot.py  chess_bot_nn.py  chess_championships.csv  chess_game.py  chess_model.ipynb  cnn_bot.py  cnn_model.py  data.ipynb  game.py  nn_model.ipynb  opening_tree.md  play_game.ipynb  play_game.py  play_game_cnn.py  play_game_nn.bat  play_game_nn.ipynb  play_game_nn.py  pyproject.toml  pytorch.ipynb  self_play.ipynb  tasks.py  train_cnn_model.ipynb  utils.py
config/: deploy.yaml  engine.yaml  eval.yaml  load_config.py  training.yaml
cpp/: CMakeLists.txt  IMPLEMENTATION_SUMMARY.md  README.md  build.bat  build.sh  chess_board.cpp  chess_engine.cpp  chess_engine.h  export_model.py  feature_extractor.cpp  feature_extractor.h  lichess_client.cpp  lichess_client.h  logistic_model.cpp  logistic_model.h  main.cpp  model_coefficients.txt  test_chess.cpp  test_compilation.cpp
cpp/train/: process_pgn.py  train_logistic_model.py
deploy/: README.md  chess-bot.service
engine/: CMakeLists.txt  HANDCRAFTED_EVAL.md  README.md  base_engine.cpp  base_engine.h  chess_board.cpp  chess_board.h  chess_engine.cpp  chess_engine.h  chess_lr.joblib  feature_extractor.cpp  feature_extractor.h  generated_config.h  handcrafted_eval.cpp  handcrafted_eval.h  lichess.py  lichess_client.cpp  lichess_client.h  logistic_model.cpp  logistic_model.h  main.cpp  mcts_engine.cpp  mcts_engine.h  nnue_model.cpp  nnue_model.h  opening_book.cpp  opening_book.h  process_pgn.ipynb  self_play.cpp  self_play.h  train_logistic_model.ipynb  uci.cpp  uci.h  utils.cpp  utils.h  visualize_lr.ipynb
engine/tests/: test_chess_board.cpp  test_chess_engine.cpp  test_feature_extractor.cpp  test_handcrafted_eval.cpp  test_nnue_model.cpp  test_self_play.cpp
engine/train/: chess_lr.joblib  export_model.py  export_nnue.py  model_coefficients.txt  process_pgn.py  train_logistic_model.py  train_nnue.py  visualize_lr.ipynb
engine/train/old/: chess_lr.joblib  chess_lr_2.joblib
eval_nn/: chess_model.ipynb
experimental/: chess_game.py  chess_net.pth  data.ipynb  lichess.py  play_game.py  train_cnn_model.ipynb
experimental/old/: bot.py  play_game.py
experimental/pth/: chess_model.pth
experimental/self_play/: best.pth  calibrate_bias.py  check_interacions.ipynb  interaction.ipynb  lichess.py  test.ipynb  train_bot.py  train_mlp_classifier.ipynb  train_network.ipynb  visualize_weights.ipynb
logs/: iterate_log.md
models/: current_best.txt  nnue_20260210_222944_15656293pos.md  nnue_20260210_222944_15656293pos_train.md  nnue_20260212_132358_21294968pos.md  nnue_20260213_035558_23971893pos.md  nnue_20260213_185932_27175223pos.md  nnue_20260307_215257_22933444pos.md
models/accepted/: nnue_20260210_222944_15656293pos.md  nnue_20260212_132358_21294968pos.md  nnue_20260212_132358_21294968pos_train.md  nnue_20260215_014049_20640100pos.md  nnue_20260215_014049_20640100pos_train.md  nnue_20260215_161843_20640100pos.md  nnue_20260215_161843_20640100pos_train.md  nnue_20260228_172531_22933444pos.md  nnue_20260228_172531_22933444pos_train.md  nnue_20260303_002645_22933444pos.md  nnue_20260303_002645_22933444pos_train.md  nnue_20260304_013853_22933444pos.md  nnue_20260304_013853_22933444pos_train.md  nnue_20260309_132637_22933444pos.md  nnue_20260309_132637_22933444pos_train.md  nnue_20260309_205331_22933444pos.md  nnue_20260309_205331_22933444pos_train.md  nnue_20260310_042757_22933444pos.md  nnue_20260310_042757_22933444pos_train.md  nnue_20260313_034409_22933444pos.md  nnue_20260313_034409_22933444pos_train.md  nnue_20260313_113106_22933444pos.md  nnue_20260313_113106_22933444pos_train.md  nnue_20260314_095532_22933444pos.md  nnue_20260314_095532_22933444pos_train.md
models/rejected/: nnue_20260210_021348_11073574pos.md  nnue_20260213_035558_23971893pos_train.md  nnue_20260213_185932_27175223pos_train.md  nnue_20260215_170655_20656970pos.md  nnue_20260215_170655_20656970pos_train.md  nnue_20260216_090316_10323300pos.md  nnue_20260216_090316_10323300pos_train.md  nnue_20260217_222216_14125741pos.md  nnue_20260217_222216_14125741pos_train.md  nnue_20260218_123045_16816753pos.md  nnue_20260218_123045_16816753pos_train.md  nnue_20260220_181505_20640100pos.md  nnue_20260220_181505_20640100pos_train.md  nnue_20260221_033951_20640100pos.md  nnue_20260221_033951_20640100pos_train.md  nnue_20260221_124412_20640100pos.md  nnue_20260221_124412_20640100pos_train.md  nnue_20260223_224642_22933444pos.md  nnue_20260223_224642_22933444pos_train.md  nnue_20260224_213058_22933444pos.md  nnue_20260224_213058_22933444pos_train.md  nnue_20260225_201718_22933444pos.md  nnue_20260225_201718_22933444pos_train.md  nnue_20260227_063619_22933444pos.md  nnue_20260227_063619_22933444pos_train.md  nnue_20260228_054709_22933444pos.md  nnue_20260228_054709_22933444pos_train.md  nnue_20260228_120338_22933444pos.md  nnue_20260228_120338_22933444pos_train.md  nnue_20260228_133748_22933444pos.md  nnue_20260228_133748_22933444pos_train.md  nnue_20260228_151153_22933444pos.md  nnue_20260228_151153_22933444pos_train.md  nnue_20260228_191716_22933444pos.md  nnue_20260228_191716_22933444pos_train.md  nnue_20260228_205831_22933444pos.md  nnue_20260228_205831_22933444pos_train.md  nnue_20260228_222826_22933444pos.md  nnue_20260228_222826_22933444pos_train.md  nnue_20260301_000437_22933444pos.md  (+34 more)
pkl/: logistic_model.pkl  logistic_scaler.pkl  mlp_model.pkl  mlp_scaler.pkl  model.pkl  scaler.pkl
pth/: chess_model.pth
scripts/: README.md  build_opening_book.py  dump_opening_tree.py  fix_training_data.py  gen_config_header.py  iterate.ps1  iterate.py  iterate_log.md  play_bots.py  play_humans.py  play_stockfish.py  train_loop.py
self_play/: best.pth  calibrate_bias.py  code.py  constants.py  full.py  full_code.py  lichess.py  lichess_bot.py  mcts.py  network.py  selfplay.py  train_bot.py  visualize_weights.ipynb
self_play/old/: best_2.pth  best_3.pth  best_5.pth  self_play.ipynb
tests/config/: test_load_config.py
tests/engine/: test_chess_board.cpp  (+8 more)
(+15 files in other folders)
